[shangwei] #574 integration with FC for geographic_zones
